--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,6 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    {{ content }}
+    <main>{{ content }}</main>
   </body>
 </html>
