--- a/assets/stylesheets/global/_base.scss
+++ b/assets/stylesheets/global/_base.scss
@@ -18,11 +18,6 @@ body {
   font-family: roboto('light');
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-}
-
 li {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -37,4 +32,10 @@ a {
   @include attention() {
     text-decoration: none;
   }
+}
+
+pre {
+  background: #fafafa;
+  border-radius: 4px;
+  padding: 25px 10px;
 }
